[package]
name = "prost-twirp"
version = "0.1.0"
authors = ["Chad Retz <chad.retz@gmail.com>"]
description = "Code generator and library for calling/serving Twirp services in Rust using prost and hyper"
license = "MIT"
repository = "https://github.com/cretz/prost-twirp"
documentation = "https://docs.rs/prost-twirp"
readme = "README.md"
exclude = ["examples/*"]

[features]
service-gen = ["prost-build"]

[dependencies]
futures = "0.1"
hyper = "0.11"
prost = "0.3"
serde_json = "1.0"

prost-build = { version = "0.3", optional = true }
