[package]
name = "prost-twirp"
version = "0.2.0-pre"
authors = ["Chad Retz <chad.retz@gmail.com>"]
description = "Code generator and library for calling/serving Twirp services in Rust using prost and hyper"
license = "MIT"
repository = "https://github.com/cretz/prost-twirp"
documentation = "https://docs.rs/prost-twirp"
readme = "README.md"
exclude = ["examples/*"]
edition = "2021"

[features]
service-gen = ["prost-build"]

[dependencies]
futures = "0.1"
hyper = "0.11"
prost = "0.11"
serde_json = "1.0"

prost-build = { version = "0.11", optional = true }

[workspace]
members = [
    "examples/errors",
    "examples/no-service-gen",
    "examples/service-gen",
    "examples/service-gen-no-runtime",
]
