[package]
name = "prost-twirp-example-errors"
version = "0.2.0-pre"
authors = ["Martin Pool", "Chad Retz <chad.retz@gmail.com>"]
build = "build.rs"
publish = false
edition = "2021"

[dependencies]
bytes = "1.2"
futures = "0.3"
hyper = "0.14"
prost = "0.11"
prost-derive = "0.11"
prost-twirp = { path = "../../" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.tokio]
version = "1.2"
features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"]

[build-dependencies]
prost-build = "0.11"
prost-twirp = { path = "../../", features = ["service-gen"] }
