[package]
name = "prost-twirp-example-service-gen-no-runtime"
version = "0.2.0-pre"
authors = ["Chad Retz <chad.retz@gmail.com>"]
build = "build.rs"
publish = false
edition = "2021"

[dependencies]
bytes = "0.4"
futures = "0.1"
hyper = "0.11"
prost = "0.11"
prost-derive = "0.11"
serde_json = "1.0"
tokio-core = "0.1"

[build-dependencies]
prost-build = "0.11"
prost-twirp = { path = "../../", features = ["service-gen"] }
