[package]
name = "prost-twirp-example-service-gen"
version = "0.2.0-pre"
authors = ["Martin Pool", "Chad Retz <chad.retz@gmail.com>"]
build = "build.rs"
publish = false
edition = "2021"

[dependencies]
bytes = "1.2"
futures = "0.3"
prost = "0.11"
prost-derive = "0.11"
prost-twirp = { path = "../../" }

[dependencies.hyper]
version = "0.14"
features = ["client", "server", "http1", "http2", "tcp"]

[dependencies.tokio]
version = "1.2"
features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"]

[build-dependencies]
prost-build = "0.11"
prost-twirp = { path = "../../", features = ["service-gen"] }
